[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/main/chat/ui/ChatChoices.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/chat/ui/ChatLineLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=3]
[ext_resource path="res://src/main/puzzle/tutorial/tutorial-messages.gd" type="Script" id=4]
[ext_resource path="res://src/main/puzzle/tutorial/tutorial-hud.gd" type="Script" id=5]
[ext_resource path="res://src/main/chat/ui/ChatPopTween.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/chat/ui/ChatLinePanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/puzzle/tutorial/tutorial-diagram.gd" type="Script" id=8]
[ext_resource path="res://src/main/puzzle/tutorial/skill-tally-panel.gd" type="Script" id=9]
[ext_resource path="res://assets/main/chat/ui/frame-pop-in.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/main/chat/ui/frame-pop-out.wav" type="AudioStream" id=13]

[node name="TutorialHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="Messages" type="Control" parent="."]
margin_right = 360.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 180, 185 )
script = ExtResource( 4 )

[node name="Panel" parent="Messages" instance=ExtResource( 7 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 170, 175 )
panel_sizes = [ Vector2( 340, 110 ), Vector2( 340, 145 ), Vector2( 340, 215 ), Vector2( 340, 300 ), Vector2( 340, 350 ) ]

[node name="Label" parent="Messages" instance=ExtResource( 2 )]
margin_left = -140.0
margin_right = 140.0
panel_padding = Vector2( 40, 40 )
chat_line_panel_path = NodePath("../Panel")

[node name="QueueTimer" type="Timer" parent="Messages"]
wait_time = 4.0
one_shot = true

[node name="Tween" parent="Messages" instance=ExtResource( 6 )]

[node name="PopInSound" type="AudioStreamPlayer" parent="Messages"]
stream = ExtResource( 12 )
volume_db = -14.0
bus = "Sound Bus"

[node name="PopOutSound" type="AudioStreamPlayer" parent="Messages"]
stream = ExtResource( 13 )
volume_db = -14.0
bus = "Sound Bus"

[node name="Diagram" type="Control" parent="."]
margin_left = 355.0
margin_right = 760.0
margin_bottom = 600.0
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="Diagram"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureMarginContainer" type="MarginContainer" parent="Diagram/VBoxContainer"]
margin_right = 405.0
margin_bottom = 446.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TexturePanel" type="Panel" parent="Diagram/VBoxContainer/TextureMarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 395.0
margin_bottom = 436.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Diagram/VBoxContainer/TextureMarginContainer/TexturePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="ChatChoices" parent="Diagram/VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 450.0
margin_right = 405.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 150 )

[node name="SkillTallyPanel" type="Panel" parent="."]
margin_left = 774.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 9 )

[node name="GridContainer" type="GridContainer" parent="SkillTallyPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -168.0
margin_right = 110.0
margin_bottom = 168.0
columns = 2

[connection signal="chat_choice_chosen" from="Diagram/VBoxContainer/ChatChoices" to="Diagram" method="_on_ChatChoices_chat_choice_chosen"]
[connection signal="all_text_shown" from="Messages/Label" to="Messages" method="_on_Label_all_text_shown"]
[connection signal="timeout" from="Messages/QueueTimer" to="Messages" method="_on_QueueTimer_timeout"]
[connection signal="pop_out_completed" from="Messages/Tween" to="Messages" method="_on_Tween_pop_out_completed"]
